--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
-cython
-git+https://github.com/cocodataset/cocoapi.git#subdirectory=PythonAPI&egg=pycocotools
-submitit
-torch>=1.5.0
-torchvision>=0.6.0
-git+https://github.com/cocodataset/panopticapi.git#egg=panopticapi
-scipy
-onnx
-onnxruntime
+addict==2.4.0
+json_numpy==1.0.1
+matplotlib==3.7.1
+numpy==1.23.5
+opencv_python==4.7.0.72
+pandas==1.5.3
+Pillow==9.5.0
+regex==2023.3.23
+scipy==1.9.1
+setuptools==66.0.0
+torch==1.10.1+cu111
+torchvision==0.11.2+cu111
+tqdm==4.65.0
+yapf==0.33.0
